Migrate use of boxed primitive constructors (#206)